微调购物车bug

--- a/BuyVegetablesTreasure/FS/Main/首页/新品/View/FSNewCommodityTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/首页/新品/View/FSNewCommodityTVCell.xib
@@ -21,7 +21,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="opH-5d-J5h">
                         <rect key="frame" x="8" y="8" width="119" height="119"/>
-                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="119" id="6Q8-3H-EGU"/>
                             <constraint firstAttribute="height" constant="119" id="zhb-4b-dke"/>
