--- a/BuyVegetablesTreasure/FS/Main/首页/Root/View/FSCommodityCVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/首页/Root/View/FSCommodityCVCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -52,11 +52,6 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pI4-Eg-3uv" userLabel="leftSeparatorLine">
-                        <rect key="frame" x="0.0" y="0.0" width="1" height="128"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="商品简介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vwk-I9-8hM">
                         <rect key="frame" x="8" y="202" width="54" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -79,6 +74,16 @@
                             <action selector="minusButtonTouchUpInside:" destination="gTV-IL-0wX" eventType="touchUpInside" id="JCA-oP-qzJ"/>
                         </connections>
                     </button>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RWj-7n-bIK" userLabel="bottomSeparatorLine">
+                        <rect key="frame" x="0.0" y="40" width="240" height="1"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XcB-FT-zAD" userLabel="rightSeparatorLine">
+                        <rect key="frame" x="100" y="20" width="1" height="320"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
                 </subviews>
             </view>
             <constraints>
@@ -87,13 +92,14 @@
             </constraints>
             <size key="customSize" width="200.5" height="251"/>
             <connections>
+                <outlet property="bottomSeparatorLine" destination="RWj-7n-bIK" id="GoZ-fH-I88"/>
                 <outlet property="countLabel" destination="n3q-2U-lLJ" id="uSf-pb-4dH"/>
                 <outlet property="descLabel" destination="vwk-I9-8hM" id="xwo-lj-i0M"/>
                 <outlet property="imageView" destination="l3b-Rl-veU" id="vkF-bk-gEm"/>
-                <outlet property="leftSeparatorLine" destination="pI4-Eg-3uv" id="BKN-f1-E89"/>
                 <outlet property="minusButton" destination="swH-Oo-leR" id="Kwo-oK-hcE"/>
                 <outlet property="plusButton" destination="Pbn-4D-Luy" id="Ol6-c2-7JF"/>
                 <outlet property="priceLabel" destination="UMR-wU-Vvv" id="ZN5-2K-dfK"/>
+                <outlet property="rightSeparatorLine" destination="XcB-FT-zAD" id="IOb-wh-SOp"/>
                 <outlet property="titleLabel" destination="Znx-Mt-AwM" id="afx-Ou-tXw"/>
                 <outlet property="topSeparatorLine" destination="rgN-To-3tE" id="N9i-QJ-fWs"/>
             </connections>
