--- a/BuyVegetablesTreasure/FS/Main/购物车/Root/View/FSShoppingCartTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/购物车/Root/View/FSShoppingCartTVCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,6 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="43" height="121"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" image="shoppingcart_uncheck"/>
+                        <state key="disabled" image="shoppingcart_disabled"/>
                         <state key="selected" image="shoppingcart_checked"/>
                         <connections>
                             <action selector="selectButtonTouchUpInside:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bEE-pu-ia0"/>
@@ -92,6 +93,7 @@
     </objects>
     <resources>
         <image name="shoppingcart_checked" width="20" height="20"/>
+        <image name="shoppingcart_disabled" width="20" height="20"/>
         <image name="shoppingcart_uncheck" width="20" height="20"/>
         <image name="减" width="18" height="18"/>
         <image name="加" width="18" height="18"/>
