--- a/BuyVegetablesTreasure/FS/Main/我的/我的订单/Root/View/FSMyOrderListTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/我的订单/Root/View/FSMyOrderListTVCell.xib
@@ -1,19 +1,66 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FSMyOrderListTVCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AnY-vq-Z6b">
+                        <rect key="frame" x="15" y="8" width="109" height="109"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="109" id="fe0-49-zc1"/>
+                            <constraint firstAttribute="height" constant="109" id="pGA-Y0-yFf"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHm-Ur-3cX">
+                        <rect key="frame" x="324.5" y="23" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.15686274510000001" green="0.15686274510000001" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqy-PZ-GQB">
+                        <rect key="frame" x="287" y="48" width="37.5" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                        <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52b-YU-dck">
+                        <rect key="frame" x="324.5" y="48" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.15686274510000001" green="0.15686274510000001" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="52b-YU-dck" firstAttribute="trailing" secondItem="fHm-Ur-3cX" secondAttribute="trailing" id="1tW-BS-gJM"/>
+                    <constraint firstItem="52b-YU-dck" firstAttribute="top" secondItem="fHm-Ur-3cX" secondAttribute="bottom" constant="8" id="Dot-k8-Onk"/>
+                    <constraint firstItem="jqy-PZ-GQB" firstAttribute="centerY" secondItem="52b-YU-dck" secondAttribute="centerY" id="FTl-6x-YqP"/>
+                    <constraint firstItem="AnY-vq-Z6b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YXS-xs-pSy"/>
+                    <constraint firstItem="AnY-vq-Z6b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="gXk-7X-KuA"/>
+                    <constraint firstItem="fHm-Ur-3cX" firstAttribute="top" secondItem="AnY-vq-Z6b" secondAttribute="top" constant="15" id="hhw-34-FH2"/>
+                    <constraint firstItem="52b-YU-dck" firstAttribute="leading" secondItem="jqy-PZ-GQB" secondAttribute="trailing" id="lMa-26-pgJ"/>
+                    <constraint firstAttribute="trailing" secondItem="fHm-Ur-3cX" secondAttribute="trailing" constant="15" id="tvG-ZO-BQi"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="iconImageView" destination="AnY-vq-Z6b" id="jbx-N2-tmX"/>
+                <outlet property="priceLabel" destination="jqy-PZ-GQB" id="Jb6-Qz-6J6"/>
+                <outlet property="titleLabel" destination="fHm-Ur-3cX" id="Aqb-Yf-HI0"/>
+                <outlet property="unitLabel" destination="52b-YU-dck" id="ZY1-ED-pg4"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
