--- a/BuyVegetablesTreasure/FS/Main/我的/我的订单/Root/View/FSMyOrderListTVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/我的订单/Root/View/FSMyOrderListTVCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,8 +25,8 @@
                             <constraint firstAttribute="height" constant="109" id="pGA-Y0-yFf"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHm-Ur-3cX">
-                        <rect key="frame" x="324.5" y="23" width="35.5" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHm-Ur-3cX">
+                        <rect key="frame" x="134" y="23" width="226" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.15686274510000001" green="0.15686274510000001" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -46,6 +46,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="52b-YU-dck" firstAttribute="trailing" secondItem="fHm-Ur-3cX" secondAttribute="trailing" id="1tW-BS-gJM"/>
+                    <constraint firstItem="fHm-Ur-3cX" firstAttribute="leading" secondItem="AnY-vq-Z6b" secondAttribute="trailing" constant="10" id="3K6-fb-8pV"/>
                     <constraint firstItem="52b-YU-dck" firstAttribute="top" secondItem="fHm-Ur-3cX" secondAttribute="bottom" constant="8" id="Dot-k8-Onk"/>
                     <constraint firstItem="jqy-PZ-GQB" firstAttribute="centerY" secondItem="52b-YU-dck" secondAttribute="centerY" id="FTl-6x-YqP"/>
                     <constraint firstItem="AnY-vq-Z6b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YXS-xs-pSy"/>
