--- a/BuyVegetablesTreasure/FS/Main/我的/Root/Controller/XFMeViewController.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/Root/Controller/XFMeViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -49,6 +49,7 @@
                 <constraint firstAttribute="bottom" secondItem="nPJ-Fx-MjD" secondAttribute="bottom" id="sqv-e5-jHA"/>
                 <constraint firstItem="nPJ-Fx-MjD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="tSB-KD-ePF"/>
             </constraints>
+            <point key="canvasLocation" x="-107" y="-3"/>
         </view>
     </objects>
     <resources>
