自定义礼品卡券弹框，领用礼品卡券接口调通

--- a/BuyVegetablesTreasure/FS/Main/我的/礼品卡/Controller/FSGetGiftCardViewController.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/礼品卡/Controller/FSGetGiftCardViewController.xib
@@ -37,12 +37,12 @@
                     <rect key="frame" x="0.0" y="65" width="375" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入12位礼品卡券号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ClU-o3-iwZ" customClass="XFLimitedTextField">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入12位礼品卡券号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ClU-o3-iwZ">
                             <rect key="frame" x="26" y="8" width="182" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <textInputTraits key="textInputTraits"/>
                         </textField>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pMo-hI-JX3">
                             <rect key="frame" x="0.0" y="48" width="320" height="0.5"/>
